--- a/lib/phoenix_typescript_web/templates/layout/root.html.heex
+++ b/lib/phoenix_typescript_web/templates/layout/root.html.heex
@@ -10,6 +10,7 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
+    <div id="react-element"></div>
     <header>
       <section class="container">
         <nav>
